front.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: front
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: front-nginx
  name: front-nginx
  namespace: front
spec:
  containers:
  - image: nginx
    name: front-nginx
    ports:
    - containerPort: 80
    resources:
      requests:
        memory: 20Mi
      limits:
        memory: 20Mi
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: front-curl
  name: front-curl
  namespace: front
spec:
  containers:
  - image: curlimages/curl
    name: front-curl
    resources:
      requests:
        memory: 20Mi
      limits:
        memory: 20Mi
