nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
  namespace: front
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 3306
    resources:
      requests:
        memory: 20Mi
      limits:
        memory: 20Mi
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
