np-front2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-front
  namespace: front
spec:
  podSelector:
    matchLabels:
      run: nginx
  policyTypes:
    - Egress
  egress:
    - ports:
      - port: 80
      to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: back
        podSelector:
          matchLabels:
            run: back-httpd
      - port: 8080
      to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: back
        podSelector:
          matchLabels:
            run: back-hello
